packages/fortifier-macros-tests/tests/validations/regex/invalid_expression_fail.stderr
error[E0277]: the trait bound `str: AsRegex` is not satisfied
 --> tests/validations/regex/invalid_expression_fail.rs:5:24
  |
3 | #[derive(Validate)]
  |          -------- required by a bound introduced by this call
4 | struct RegexData<'a> {
5 |     #[validate(regex = "abc")]
  |                        ^^^^^ the trait `AsRegex` is not implemented for `str`
  |
  = help: the following other types implement trait `AsRegex`:
            &T
            LazyLock<regex::regex::string::Regex>
            regex::regex::string::Regex
  = note: required for `&str` to implement `AsRegex`
note: required by a bound in `validate_regex`
 --> $WORKSPACE/packages/fortifier/src/validations/regex.rs
  |
  |     fn validate_regex(&self, regex: impl AsRegex) -> Result<(), RegexError>;
  |                                          ^^^^^^^ required by this bound in `ValidateRegex::validate_regex`

error[E0277]: the trait bound `&str: AsRegex` is not satisfied
 --> tests/validations/regex/invalid_expression_fail.rs:5:24
  |
3 | #[derive(Validate)]
  |          -------- required by a bound introduced by this call
4 | struct RegexData<'a> {
5 |     #[validate(regex = "abc")]
  |                        ^^^^^ the trait `Sized` is not implemented for `str`
  |
  = help: the following other types implement trait `AsRegex`:
            &T
            LazyLock<regex::regex::string::Regex>
            regex::regex::string::Regex
  = note: required for `&str` to implement `AsRegex`
note: required by a bound in `validate_regex`
 --> $WORKSPACE/packages/fortifier/src/validations/regex.rs
  |
  |     fn validate_regex(&self, regex: impl AsRegex) -> Result<(), RegexError>;
  |                                          ^^^^^^^ required by this bound in `ValidateRegex::validate_regex`
